--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="main.css">
     <link rel="icon" href="../assets/images/medtech-favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1> MedTech </h1>
+    <header class="text-center py-5">
+        <h1>MedTech</h1>
+        <p>Gerenciamento de prontuários médicos de forma eficiente e segura.</p>
     </header>
     
-    <main>
+    <main class="container my-5">
+        <section class="text-center">
+            <p>Para saber mais sobre o projeto MedTech, clique no botão abaixo:</p>
+            <a href="infos.html" class="btn btn-primary btn-lg mb-4">Ver Detalhes do Projeto</a>
+        </section>
         <section>
-            <h2>Bem-vindo ao Sistema MedTech !</h2>
-            <img src="medtech-banner.png" alt="Banner do Sistema MedTech" class="banner-image">
+            <h2>Bem-vindo ao Sistema MedTech!</h2>
+            <img src="medtech-banner.png" alt="Banner do Sistema MedTech" class="banner-image img-fluid">
             <p>Nosso sistema permite gerenciar registros de pacientes e atendimentos de forma eficiente e segura. Com ele, você pode:</p>
             <ul>
                 <li>Registrar novos pacientes</li>
@@ -26,11 +32,16 @@
             </ul>
         </section>
     </main>
-    <footer>
+    
+    <footer class="bg-dark text-center py-4">
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/checchinatomf/" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/otalco" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
         </div>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
