--- a/infos.html
+++ b/infos.html
@@ -16,6 +16,7 @@
 
     <div class="container my-5">
         <section>
+            <h2>Acesse em: http://168.75.108.156/pages/landingPage.html </h2>
             <h2>Funcionalidades</h2>
             <ul>
                 <li>Listagem de pacientes</li>
